--- a/src/Makefile
+++ b/src/Makefile
@@ -1,12 +1,12 @@
 .SUFFIXES:
 
-CC=gcc
+CC=clang
 
 # uncomment to compile in 32bits mode (require gcc-*-multilib packages
 # on Debian/Ubuntu)
-HOST32= -m32
+HOST32=
 
-CFLAGS= $(HOST32) -Wall -Werror -std=c99 -g -DMEMORY_SIZE=128000
+CFLAGS= $(HOST32) -Wall -Werror -Wshadow -std=c99 -g -DMEMORY_SIZE=128000
 CFLAGS+= -DDEBUG
 LDFLAGS= $(HOST32)
 INCLUDE=.
